develop -> release/int (#122)
* SCAT-2303 - fix to allow spaces in document upload filenames (#114)

* SCAT-2303 (follow up) - fix for Tomcat/Spring upload/download limits (#116)

* Feature/scat 2783 new order field (#117)

* SCAT-2783 - new order field for requirement & requirement group

* Feature/scat 2225 event buyer questions (#119)

SCAT-2225 - Extended GET event details to return buyer questions

* Publish event (Rfx) (#120)

Co-authored-by: thoma <thoma@DESKTOP-5U0FN7J.lan>

Co-authored-by: sudhakar-reddy-konda <sudhakar.konda@crowncommercial.gov.uk>
Co-authored-by: Tom Bunting <6031257+tommyb82@users.noreply.github.com>
Co-authored-by: thoma <thoma@DESKTOP-5U0FN7J.lan>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
   datasource:
     hikari:
       connectionTimeout: 10000
+  servlet:
+    multipart:
+      max-file-size: 300MB # must match config.maxSize
+      max-request-size: 300MB # must match config.maxSize
 
 server:
   error:
@@ -113,6 +117,8 @@ config:
         endpoint: /esop/jint/api/public/ja/v1/companyprofiles
       getAttachment:
         endpoint: /esop/jint/api/public/ja/v1/attachments?fileId={fileId}&fileName={fileName}
+      publishRfx:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/publish
 
     agreementsService:
       # baseUrl: "SET IN ENV"
