SCAT-3264 - updated allowed doc upload file extensions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,7 @@ config:
       - doc
       - docx
       - jpg
+      - jpeg
       - kml
       - ods
       - odt
@@ -54,7 +55,7 @@ config:
       - png
       - ppt
       - pptx
-      - ref
+      - rdf
       - rtf
       - txt
       - xls
