--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 		<openapi-generator.version>5.2.1</openapi-generator.version>
 		<hibernate-types.version>2.14.0</hibernate-types.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
+		<simple-odf.version>0.9.0</simple-odf.version>
+		<jena-core.version>4.2.0</jena-core.version>
 	</properties>
 
 	<dependencies>
@@ -116,6 +118,31 @@
 			<artifactId>modelmapper</artifactId>
 			<version>${modelmapper.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.odftoolkit</groupId>
+			<artifactId>simple-odf</artifactId>
+			<version>${simple-odf.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.jena</groupId>
+					<artifactId>jena-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- Snyk recommended -->
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-core</artifactId>
+			<version>${jena-core.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+		</dependency>
+
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
