--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- gson -->
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.9.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
