created response object

--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,6 @@
 		<dependency>
     		<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
-    		<version>2.9.0</version>
 		</dependency>
 
 	</dependencies>
@@ -190,7 +189,9 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/master/cat/CaT-service.yaml</inputSpec>
+							<!-- <inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/master/cat/CaT-service.yaml</inputSpec> -->
+							<inputSpec>/Users/venki/Documents/CCS/ccs-scale-api-definitions/cat/CaT-service.yaml</inputSpec>
+							
 							<generatorName>spring</generatorName>
 							<generateModels>true</generateModels>
 							<generateSupportingFiles>false</generateSupportingFiles>
