--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
   only:
     - "/^(feature|bugfix)\\/(SCC|SCAT|CON)-[0-9]+.*$/"
     - "/^(release)\\/.*$/"
+    - "/^snyk-upgrade-[a-z0-9]+$/"
     - develop
     - main
 
