--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,3 +4,7 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: https://dummy.example.com
+          
+config:
+  flags:
+    devMode: true        
