--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<modelmapper.version>2.4.5</modelmapper.version>
 		<simple-odf.version>0.9.0</simple-odf.version>
 		<jena-core.version>4.4.0</jena-core.version>
+		<commons-io.version>2.11.0</commons-io.version>
 	</properties>
 
 	<dependencies>
@@ -128,6 +129,11 @@
 					<artifactId>jena-core</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>${commons-io.version}</version>
 		</dependency>
 
 		<!-- Snyk recommended -->
