SCAT-3090 added missing get message url

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,6 +131,8 @@ config:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/publish
       getMessages:
         endpoint: /esop/jint/api/public/ja/v1/messages?flt={filters}
+      getMessage:
+        endpoint: /esop/jint/api/public/ja/v1/messages/{message-id}
         
       rpa: 
 #       baseUrl: "SET IN ENV"
