--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -134,7 +134,7 @@ config:
       publishRfx:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/publish
       getMessages:
-        endpoint: /esop/jint/api/public/ja/v1/messages?flt={filters}
+        endpoint: /esop/jint/api/public/ja/v1/messages?flt={filters}&comp={components}&start={start}
       getMessage:
         endpoint: /esop/jint/api/public/ja/v1/messages/{message-id}
       startEvaluation:
