--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,7 +136,7 @@ config:
       getMessages:
         endpoint: /esop/jint/api/public/ja/v1/messages?flt={filters}&comp={components}&start={start}
       getMessage:
-        endpoint: /esop/jint/api/public/ja/v1/messages/{message-id}
+        endpoint: /esop/jint/api/public/ja/v1/messages/{message-id}?comp={components}
       startEvaluation:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/evaluations/start  
         
