--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -174,6 +174,8 @@ config:
         endpoint: /esop/jint/api/public/ja/v1/attachments?fileId={fileId}&fileName={fileName}
       publishRfx:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/publish
+      extendRfx:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/extend
       getMessages:
         endpoint: /esop/jint/api/public/ja/v1/messages?flt={filters}&comp={components}&start={start}
       getMessage:
