--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -231,7 +231,7 @@ config:
       getOrganisation:
         uriTemplate: /organisation-profiles/{org-id}
         
-    documentUpload:
+    docUploadSvc:
       timeoutDuration: 10
       awsRegion: eu-west-2
       documentStateProcessing: processing
