Pre-production (pre) environment configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,13 @@ deploy:
     on:
       branch: release/uat
 
+  # PRE
+  - provider: script
+    skip_cleanup: true
+    script: CF_ENVIRONMENT=pre bash ./deploy.sh
+    on:
+      branch: release/pre      
+
 # WARNING! Do NOT use the --add flag of travis cli encrypt - it removes all formatting and comments
 env:
   global:
