--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: java
-script: mvn package
+jdk: openjdk17
+script: 
+  # Install latest version of Maven compatible with JDK 17
+  - wget https://dlcdn.apache.org/maven/maven-3/3.8.5/binaries/apache-maven-3.8.5-bin.tar.gz
+  - mkdir ~/apps
+  - tar xf /tmp/apache-maven-*.tar.gz -C ~/apps
+  - export M2_HOME=~/apps/apache-maven-3.8.5
+  - export PATH=${M2_HOME}/bin:${PATH}
+  - mvn package
 cache:
   directories:
     - "$HOME/.m2"
