--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,8 @@ jobs:
 
     - uses: actions/setup-java@v3
       with:
-        java-version: 17
+        distribution: 'temurin'
+        java-version: '17'
     - run: mvn compile
     
     - name: Perform CodeQL Analysis
