--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,3 +10,8 @@ config:
     devMode: true        
   retry:
     maxAttempts: 3
+  external:
+    jaggaer:
+      rpa: 
+        encryptionIv: hjnhgy8k*A?(7y-K
+        encryptionKey: uikjnsh657*y%hD*G-KaPdS*kij#3s6v  
