--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<tika-core.version>2.4.0</tika-core.version>
 		<java-cfenv-boot.version>2.4.0</java-cfenv-boot.version>
 		<notifications-java-client.version>3.17.3-RELEASE</notifications-java-client.version>
+		<poi-ooxml.version>5.2.2</poi-ooxml.version>
 	</properties>
 
 	<dependencies>
@@ -174,6 +175,12 @@
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>${tika-core.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi-ooxml.version}</version>
 		</dependency>
 
 		<!-- Test dependencies -->
