Fix RPA transfer config period

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -209,6 +209,7 @@ config:
     s3:
       rpa:
         region: eu-west-2
+        buyerExport: P1W
         
     agreementsService:
       # baseUrl: "SET IN ENV"
