--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -206,7 +206,8 @@ config:
     s3:
       rpa:
         region: eu-west-2
-        buyerExport: P7D # 1 week
+        # Default to on the hour every hour MON-FRI
+        exportSchedule: "0 0 * * * MON-FRI"
         
     agreementsService:
       # baseUrl: "SET IN ENV"
