--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -168,7 +168,9 @@ config:
         # endpoint: /esop/jint/api/public/ja/v1/companyprofiles?comp=USER;SSO_CODE&flt=TYPE==SELLER;SSO_UserLogin=={{PRINCIPAL}};SSO_Code==OPEN_ID
       exportRfx:
         endpoint: /esop/jint/api/public/ja/v1/rfxs/{id}
-      
+      getRfxByComponent:  
+        endpoint: /esop/jint/api/public/ja/v1/rfxs/{id}?comp={components}
+         
       # This is far more performant for summary-level only data
       searchRfxSummary:
         endpoint: /esop/jint/api/public/ja/v1/rfxs?flt=rfxId=in=({rfqIds})
