--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -190,6 +190,12 @@ config:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/evaluations/start  
       invalidateEvent:
         endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/invalidate
+      award:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/awardRfx
+      preAward:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/preawardRfx
+      completeTechnical:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/completetechnical      
           
       # Temporary - SOAP API workaround for UPDATE/CREATE/DELETE user profile SSO data
       soap:
