added status and check null value for dates

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,6 +87,7 @@ config:
         750: ACTIVE
         800: ACTIVE
         900: ACTIVE
+        975: ACTIVE
         500: COMPLETE
         950: COMPLETE
         1400: COMPLETE
