--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server:
 config:
   ocds:
     authority: ocds
-    ocid-prefix: b5fd17
+    ocid-prefix: pfhb7i
   retry:
     maxAttempts: 5
     multiplier: 2
