Added some more calls to cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,8 @@ deploy:
     skip_cleanup: true
     script: CF_ENVIRONMENT=nft bash ./deploy.sh
     on:
-      branch: release/nft
+    # branch: release/nft
+      branch: feature/SCAT-6766-performance-fixes-to-nft
 
   # UAT
   - provider: script
