--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ deploy:
     skip_cleanup: true
     script: CF_ENVIRONMENT=dev bash ./deploy.sh
     on:
-      branch: develop
+      #branch: develop
+      branch: bugfix/SCAT-7226-Scoring-issue
 
   # INT (SIT)
   - provider: script
