--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
     - "/^(feature|bugfix)\\/(SCC|SCAT|CON)-[0-9]+.*$/"
     - "/^(release)\\/.*$/"
     - "/^snyk-(upgrade|fix)-[a-z0-9]+$/"
+    - "/^(sbx3feature)\\/.*$/"
     - develop
     - main
 
@@ -35,6 +36,14 @@ deploy:
     on:
       all_branches: true
       condition: "${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(feature|bugfix)\\/(SCC|SCAT|CON)-[0-9]+.*$ || ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^snyk-(upgrade|fix)-[a-z0-9]+$"
+
+  # SBX3 - modify CF_ENVIRONMENT as required
+  - provider: script
+    skip_cleanup: true
+    script: CF_ENVIRONMENT=sbx3 bash ./deploy.sh
+    on:
+      all_branches: true
+      condition: "${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(sbx3feature)\\/.*$"
 
   # DEVELOP
   - provider: script
