--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<swagger-parser.version>2.1.5</swagger-parser.version>
+		<swagger-parser.version>2.1.9</swagger-parser.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<openapi-generator.version>5.2.1</openapi-generator.version>
 		<hibernate-types.version>2.17.1</hibernate-types.version>
@@ -160,10 +160,10 @@
 					<groupId>org.apache.jena</groupId>
 					<artifactId>jena-core</artifactId>
 				</exclusion>
-				<exclusion>
+				<!--<exclusion>
 					<groupId>xerces</groupId>
 					<artifactId>xercesImpl</artifactId>
-				</exclusion>
+				</exclusion>-->
 
 			</exclusions>
 		</dependency>
