--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+			<version>2.1.212</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -151,6 +152,17 @@
 			<artifactId>modelmapper</artifactId>
 			<version>${modelmapper.version}</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+			<version>5.7.5</version>
+		</dependency>
+
+		<!--org.springframework.security:spring-security-oauth2-client@5.6.9, @5.7.5
+		org.springframework.security:spring-security-oauth2-client@5.6.9
+		org.springframework.security:spring-security-oauth2-client@5.7.5-->
 		<dependency>
 			<groupId>org.odftoolkit</groupId>
 			<artifactId>simple-odf</artifactId>
