--- a/pom.xml
+++ b/pom.xml
@@ -163,10 +163,10 @@
 					<groupId>org.apache.jena</groupId>
 					<artifactId>jena-core</artifactId>
 				</exclusion>
-				<!--<exclusion>
+				<exclusion>
 					<groupId>xerces</groupId>
 					<artifactId>xercesImpl</artifactId>
-				</exclusion>-->
+				</exclusion>
 
 			</exclusions>
 		</dependency>
@@ -175,6 +175,8 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
 		</dependency>
+
+
 		
 		<dependency>
 		    <groupId>uk.gov.service.notify</groupId>
@@ -212,6 +214,14 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>${poi-ooxml.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesimpl</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+
+		
 
 		<!-- Test dependencies -->
 		<dependency>
