--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-			<version>2.1.212</version>
+			<version>2.1.214</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -226,11 +226,15 @@
 			<version>${poi-ooxml.version}</version>
 		</dependency>
 
+
+
+		<!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
 		<dependency>
 			<groupId>xerces</groupId>
-			<artifactId>xercesimpl</artifactId>
-			<version>2.12.1</version>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.12.0</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -266,6 +270,7 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
