--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,8 @@ deploy:
     on:
       #branch: develop
       branch: feature/SCAT-7806-security-fixes
+      #this needs to be removed
+      
 
   # INT (SIT)
   - provider: script
