--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,13 @@ deploy:
       all_branches: true
       condition: "${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(sbx3feature)\\/.*$"
 
+  # SBX4 - modify CF_ENVIRONMENT as required
+  - provider: script
+    skip_cleanup: true
+    script: CF_ENVIRONMENT=sbx4 bash ./deploy.sh
+    on:
+      branch: release/sbx4
+
   # DEVELOP
   - provider: script
     skip_cleanup: true
