--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<snakeyaml.version>1.32</snakeyaml.version>
 		<spring-security-oauth2-client.version>5.7.5</spring-security-oauth2-client.version>
 		<spring-security-web.version>5.7.5</spring-security-web.version>
-		<h2database.version>2.1.214</h2database.version>
+		<!--<h2database.version>2.1.214</h2database.version>-->
 
 	</properties>
 
@@ -152,11 +152,17 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 			<version>${h2database.version}</version>
+		</dependency>-->
+
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
