--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.7.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.projectreactor.netty</groupId>
+			<artifactId>reactor-netty-http</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
